[gd_scene load_steps=13 format=3 uid="uid://bac3e341auh65"]

[ext_resource type="Script" path="res://scenes/gameplay/world_item.gd" id="1_j4y6h"]
[ext_resource type="Texture2D" uid="uid://d3y1hackv7pnb" path="res://sprites/items/power_plant_shadow.png" id="2_27365"]
[ext_resource type="Texture2D" uid="uid://bag8t16pfux4f" path="res://sprites/items/tree.svg" id="3_8snm2"]
[ext_resource type="Texture2D" uid="uid://ceoqx4aly3mp2" path="res://sprites/ui/gather_resource_icons/pollution_down.svg" id="4_dgs1v"]
[ext_resource type="Texture2D" uid="uid://c7g6c8ddnqbtx" path="res://sprites/ui/money.svg" id="8_7wc4m"]

[sub_resource type="Animation" id="Animation_v8mef"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GatherIcons:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GatherIcons:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_h37tu"]
resource_name = "on_gathered"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 0.8),
"transitions": PackedFloat32Array(0.5, -2, 1, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.1), Vector2(1.1, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GatherIcons:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1.1, 1.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GatherIcons:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_64qve"]
resource_name = "on_placed"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.5, -2, 1, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.1), Vector2(1.1, 0.9), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_fwxko"]
resource_name = "on_sell"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.2, 0.41347, 1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.3, 0.706351, 1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2l8gg"]
_data = {
"RESET": SubResource("Animation_v8mef"),
"on_gathered": SubResource("Animation_h37tu"),
"on_placed": SubResource("Animation_64qve"),
"on_sell": SubResource("Animation_fwxko")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l7nmv"]
bg_color = Color(0, 0, 0, 0.588235)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kgpov"]
bg_color = Color(0, 0, 0, 0.784314)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Tree" type="Node2D"]
script = ExtResource("1_j4y6h")
sell_price = 10
pollution = -1

[node name="Shadow" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, 6)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_27365")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -22)
texture = ExtResource("3_8snm2")

[node name="GatherIcons" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.5, 0.5)

[node name="PollutionDown" type="Sprite2D" parent="GatherIcons"]
position = Vector2(0, -53)
texture = ExtResource("4_dgs1v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2l8gg")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="SellButtonHitbox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -17.0
offset_top = -23.0
offset_right = 17.0
offset_bottom = 10.0

[node name="SellButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -38.0
offset_right = 44.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 37.495)
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxFlat_l7nmv")
theme_override_styles/disabled = SubResource("StyleBoxFlat_l7nmv")
theme_override_styles/hover = SubResource("StyleBoxFlat_l7nmv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kgpov")
theme_override_styles/normal = SubResource("StyleBoxFlat_l7nmv")

[node name="SellLabel" type="Label" parent="SellButton"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 35.0
grow_horizontal = 2
text = "Vender"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Money2" type="Label" parent="SellButton"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 43.0
offset_top = 27.0
offset_bottom = 58.0
grow_horizontal = 2
text = "60"
vertical_alignment = 1

[node name="Money" type="TextureRect" parent="SellButton"]
layout_mode = 0
offset_left = 16.0
offset_top = 34.0
offset_right = 54.0
offset_bottom = 65.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_7wc4m")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="mouse_entered" from="SellButtonHitbox" to="." method="_on_sell_button_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="SellButton" to="." method="_on_sell_button_mouse_exited"]
[connection signal="pressed" from="SellButton" to="." method="_on_button_pressed"]
